Fixed spacing around title

--- a/client/css/styles.css.scss
+++ b/client/css/styles.css.scss
@@ -218,6 +218,7 @@ input#contactFormSubmit {
 .main-title {
   margin-top: 150px;
   font-size: 5em;
+  line-height: 1em;
   font-weight: lighter;
   text-transform: uppercase;
 }
